# Mizan-bookkeeping

./: .env.example  .env.production.example  .gitignore  AGENT_IMPLEMENTATION_PROMPTS.md  ARCHITECTURE.md  AUDIT_MULTITENANCY.md  BUGLOG.md  CHANGELOG.md  CURSOR_RULES.md  DECISIONS.md  DEPLOY.md  DESIGN_SYSTEM.md  DEV.md  FINANCIAL_AUDIT.md  FRONTEND_AUDIT.md  FRONTEND_AUDIT_FINAL.md  FRONTEND_PROPOSAL_PREVIEW.html  FUTURE_IDEAS.md  GO_LIVE_RUNBOOK.md  IDEAS_FROM_PREVIOUS_APP.md  OPS_RESTORE.md  POST_LAUNCH_PLAN.md  PRE_DEPLOY_CHECKLIST.md  PROGRESS.md  README_START_HERE.md  REVIEWER_BRIEF.md  ROADMAP.md  Restaurant_Bookkeeping_App_Decisions.md  TESTS.md  THEME_BRIEF_for_design_agent.md  THEME_SECOND_OPINION_brief.md  UX_AUDIT_PROPOSAL.md  app_preview.html  docker-compose.yml  netlify.toml  render.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  launch.py  main.py
backend/scripts/: docker-entrypoint.sh  migrate_production.sh  run_backup_drill.sh  security_dependency_scan.sh  security_production_pytest.sh  security_secrets_audit.sh  smoke_onboarding.py  verify_backup_restore.sh  verify_fresh_install.sh  verify_production_db.sh
backend/tests/: auth_helpers.py  conftest.py  control_account_tie.py  delivery_helpers.py  test_account_transfers.py  test_backups.py  test_bank_fee_detect.py  test_bank_fee_import_auto_post.py  test_bank_import_csv_options.py  test_bank_import_profile_suggest.py  test_bank_import_profiles.py  test_bank_import_sign_hints.py  test_bank_statement_discard.py  test_bank_statement_import.py  test_bank_statement_line_dedup.py  test_cash_drawer.py  (+124 more)
(+905 files in other folders)
