[project]
name = "mizan-backend"
version = "0.1.0"
description = "Mizan restaurant bookkeeping API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pypdf>=5.0",
    "openpyxl>=3.1",
    "reportlab>=4.0",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "boto3>=1.35",
    "PyJWT[crypto]>=2.9",
    "python-multipart>=0.0.9",
    "sentry-sdk[fastapi]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["assets/fonts/*.ttf", "assets/fonts/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
